firebase Connection and Multithreading