@@ -23,25 +23,25 @@
 		    <artifactId>mysql-connector-j</artifactId>
 		    <version>8.2.0</version>
 		</dependency>
-	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+	  <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-storage -->
+	  <dependency>
+		  <groupId>com.google.cloud</groupId>
+		  <artifactId>google-cloud-storage</artifactId>
+		  <version>2.32.1</version>
+	  </dependency>
+
+	  <!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+	  <dependency>
+		  <groupId>com.google.firebase</groupId>
+		  <artifactId>firebase-admin</artifactId>
+		  <version>9.2.0</version>
+	  </dependency>
+
+	  <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 	<dependency>
 	    <groupId>org.apache.maven.plugins</groupId>
 	    <artifactId>maven-compiler-plugin</artifactId>
 	    <version>3.12.1</version>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
-	<dependency>
-	    <groupId>jakarta.mail</groupId>
-	    <artifactId>jakarta.mail-api</artifactId>
-	    <version>2.1.2</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
-	<dependency>
-	    <groupId>com.sun.mail</groupId>
-	    <artifactId>jakarta.mail</artifactId>
-	    <version>2.0.1</version>
 	</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
@@ -50,12 +50,19 @@
 	    <artifactId>controlsfx</artifactId>
 	    <version>11.2.0</version>
 	</dependency>
+	  <!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>jakarta.mail</artifactId>
+		  <version>2.0.1</version>
+	  </dependency>
 
-	<dependency>
-		<groupId>com.book.system.management</groupId>
-		<artifactId>bookSystemThereader</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
+	  <!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
+	  <dependency>
+		  <groupId>jakarta.mail</groupId>
+		  <artifactId>jakarta.mail-api</artifactId>
+		  <version>2.1.2</version>
+	  </dependency>
 
   </dependencies>
 <build>
@@ -65,8 +72,9 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.12.1</version>
             <configuration>
-                <source>9</source>
-                <target>9</target>
+                <source>21</source>
+                <target>21</target>
+                <compilerArgs>--enable-preview</compilerArgs>
             </configuration>
         </plugin>
     </plugins>
